--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 <div class="tab-pane fade" id="mentorship" role="tabpanel" aria-labelledby="mentorship-tab">
     <div style="padding:20px 10px;">
         <p>I have had the pleasure of working with several talented students over the years on topics ranging from efficient deep learning to scientific computing. An incomplete list can be found below.</p>
-        <p>&bull; Chinmay Patwardhan, visiting scholar at Oak Ridge National Lab Spring 2026, currently  Ph.D. student at KiT</p>
+        <p>&bull; Chinmay Patwardhan, visiting researcher at Oak Ridge National Lab Spring [2026], currently  Ph.D. student at KiT</p>
         <p style="margin-left:20px;">&ndash; <em>Developing agentic workflow orchestration for multi-fidelity scientific simulation</em></p>
         <p>&bull; Thomas Snyder, summer intern at Oak Ridge National Lab [2024 & 2025], currently undergrad student at Yale</p>
         <p style="margin-left:20px;">&ndash; <em>Building low-rank compression of Vision Transformers for geospatial applications on resource constraint edge devices.</em></p>
