--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
                         <button class="nav-link" id="conferences-tab" data-bs-toggle="tab" data-bs-target="#conferences" type="button" role="tab" aria-controls="conferences" aria-selected="false">Presentations</button>
                     </li>
                     <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="awards-tab" data-bs-toggle="tab" data-bs-target="#awards" type="button" role="tab" aria-controls="awards" aria-selected="false">Awards</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
                         <button class="nav-link" id="mentorship-tab" data-bs-toggle="tab" data-bs-target="#mentorship" type="button" role="tab" aria-controls="mentorship" aria-selected="false">Mentorship</button>
                     </li>
                     <li class="nav-item" role="presentation">
@@ -508,6 +511,19 @@
         <p>&bull; A structure-preserving surrogate model for the closure of the moment system of the Boltzmann equation — <a href="https://arc.aiaa.org/doi/10.2514/6.2021-2895" target="_blank">AIAA AVIATION 2021 FORUM</a>, August 2021</p>
         <p>&bull; Windowing Regularization Techniques for Unsteady Aerodynamic Shape Optimization — <a href="https://arc.aiaa.org/doi/10.2514/6.2020-3130" target="_blank">AIAA AVIATION 2020 FORUM</a>, June 2020</p>
         <p>&bull; Windowing Regularization Techniques for Unsteady Aerodynamic Shape Optimization — <a href="https://su2foundation.org/su2conference2020/" target="_blank">SU2 Conference 2020</a> [<a href="https://www.youtube.com/watch?v=KENu6l-B2O4&feature=youtu.be" target="_blank">recorded talk</a>], June 2020</p>
+    </div>
+</div>
+
+<!-- Awards & Prizes -->
+<div class="tab-pane fade" id="awards" role="tabpanel" aria-labelledby="awards-tab">
+    <div style="padding:20px 10px;">
+        <p><strong>Awards and Stipends</strong></p>
+        <p>&bull; Alston S. Householder Fellowship &mdash; Prestigious postdoctoral fellowship at Oak Ridge National Laboratory, funded by the DOE Office of Advanced Scientific Computing Research, honoring Dr. Alston S. Householder for his seminal contributions to numerical analysis and scientific computing [2023]</p>
+        <p>&bull; DFG Priority Project Fellow: SPP 2298 &ldquo;Theoretical Foundations of Deep Learning&rdquo; [2021&ndash;2024]</p>
+        <p>&bull; KHYS Scholarship &mdash; Research stipend for PhD students, research stay at Oak Ridge National Lab, USA, 3 months [2022]</p>
+        <p>&bull; 2nd place at the Helmholtz AI Hero Hackathon [2022]</p>
+        <p>&bull; 1st place at the Multidisciplinary Design Optimization Student Paper Competition at the <a href="https://www.aiaa.org/aviation" target="_blank">AIAA Aviation Forum 2020</a> [2020]</p>
+        <p>&bull; Erasmus Scholarship &mdash; Research stipend for Masters students, semester abroad at NTNU Trondheim, Norway, 6 months [2018]</p>
     </div>
 </div>
 
