--- a/index.html
+++ b/index.html
@@ -77,18 +77,32 @@
                         </td>
                         <td style="padding:2.5%;width:70%;vertical-align:middle">
                             <h1 style="margin-bottom:10px;"><name>Steffen Schotth&ouml;fer</name></h1>
-                            <p>I am a Research Scientist at <a href="https://https://www.ornl.gov/" target="_blank">Oak Ridge National Laboratory</a>.
-                            My research develops mathematically principled methods for efficient deep learning, including low-rank training, model compression, and geometry-aware optimization.
-                            I am broadly interested in the intersection of numerical analysis and machine learning, with recent work on adversarial robustness of compressed models, federated learning, and structure-preserving neural networks for scientific computing.</p>
+                            <p>I am a Research Scientist at <a href="https://www.ornl.gov/" target="_blank">Oak Ridge National Laboratory</a>.
+                            My research develops TODO
                             <p><strong>Bio:</strong> I received my Dr. rer. nat. from the <a href="https://www.kit.edu" target="_blank">Karlsruhe Institute of Technology</a> (KIT) in 2023, where I was advised by <a href="https://www.scc.kit.edu/personen/martin.frank.php" target="_blank">Prof. Dr. Martin Frank</a>. I received my M.Sc. and B.Sc. in Mathematics from <a href="https://rptu.de" target="_blank">TU Kaiserslautern</a>.</p>
                             <p style="text-align:left">
                                 <a href="https://github.com/ScSteffen" target="_blank">GitHub</a> &nbsp;|&nbsp;
                                 <a href="https://www.linkedin.com/in/steffen-schotthoefer" target="_blank">LinkedIn</a> &nbsp;|&nbsp;
-                                <a href="https://scholar.google.com/citations?user=dZqiHeMAAAAJ" target="_blank">Google Scholar</a>
+                                <a href="https://scholar.google.com/citations?user=dZqiHeMAAAAJ" target="_blank">Google Scholar</a> &nbsp;|&nbsp;
+                                contact.schotthoefer [at] gmail [dot] com
                             </p>
                         </td>
                     </tr>
                 </tbody></table>
+                <hr>
+
+                <!-- News / Highlights -->
+                <div style="padding:0 2.5%;">
+                    <h2>News</h2>
+                    <ul style="list-style:none;padding-left:0;">
+                        <li style="margin-bottom:6px;"><strong>Dec 2025</strong> &mdash; ORNL Early Career Award to lead a 2-year project on automating high-stakes scientific simulation workflows using agentic orchestration</li>
+                        <li style="margin-bottom:6px;"><strong>Dec 2025</strong> &mdash; Distinguished Paper Award, Oak Ridge National Laboratory (Computational Science &amp; Mathematics Division), for <em>Dynamical Low-Rank Compression of Neural Networks with Robustness under Adversarial Attacks</em></li>
+                        <li style="margin-bottom:6px;"><strong>Dec 2025</strong> &mdash; NeurIPS 2025: 1 oral presentation, 2 main track papers, 1 workshop oral, 3 workshop papers, top reviewer award</li>
+                        <li style="margin-bottom:6px;"><strong>June 2025</strong> &mdash; Accepted position paper at the US DOE ASCR Workshop on Inverse Methods for Complex Systems: <em>Uncertainty-aware inverse modeling for federated scientific discovery across DOE facilities</em></li>
+                        <li style="margin-bottom:6px;"><strong>April 2025</strong> &mdash; ICLR 2025: Main track paper <em>GeoLoRA &mdash; Geometric Integration for Parameter Efficient Fine-Tuning</em></li>
+                    </ul>
+                </div>
+
                 <hr>
 
                 <!-- Tab Navigation -->
