--- a/index.html
+++ b/index.html
@@ -136,9 +136,28 @@
 <!-- Research Interests -->
 <div class="tab-pane fade show active" id="about" role="tabpanel" aria-labelledby="about-tab">
     <div style="padding:20px 10px;">
-        <p>&bull; Efficient AI models and compression</p>
-        <p>&bull; Low-rank pretraining and fine-tuning</p>
-        <p>&bull; Scalable & distributed machine learning</p>
+        <p>Below are my current research directions and contributions to funded projects.</p>
+        <p>
+            <papertitle>Continuous Learning of Scientific Foundation Models</papertitle>
+            <br>
+            <em><a href="https://genesis.energy.gov/?utm_campaign" target="_blank">DOE Genesis Mission</a></em>
+            <br>
+            Within DOE Genesis, this research develops agentic continuous-learning frameworks for Self-Improving Foundation Models, enabling robust, automated model updating across safety-critical scientific applications and deployment with model teams spanning multiple national laboratories.
+        </p>
+        <p>
+            <papertitle>Agentic Orchestration of Scientific Simulation Workflows</papertitle>
+            <br>
+            <em>ORNL Early Career Award</em>
+            <br>
+            This research develops LLM-based agentic methods for automating high-stakes scientific simulation workflows, coordinating portfolios of solvers, surrogate models, and uncertainty quantification tools with minimal human intervention. By reducing expert wall-time in design-space exploration, this work accelerates innovation cycles across national energy and security applications.
+        </p>
+        <p>
+            <papertitle>Scalable Low-Rank Methods for Efficient Deep Learning</papertitle>
+            <br>
+            <em><a href="https://www.ornl.gov/content/alston-s-householder-fellowship-applied-mathematics-and-scientific-computing" target="_blank">Householder Fellowship</a></em>
+            <br>
+            This research develops scalable low-rank methods for compute- and energy-efficient deep learning at scale, focusing on adaptive rank compression during training and fine-tuning. By dynamically allocating rank where it matters most, these approaches reduce memory, compute, and communication costs while preserving accuracy and robustness, enabling efficient training and deployment of large neural networks on modern accelerator hardware.
+        </p>
     </div>
 </div>
 
