--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <h1 style="margin-bottom:10px;"><name>Steffen Schotth&ouml;fer</name></h1>
                             <p>I am a Research Scientist at <a href="https://www.ornl.gov/" target="_blank">Oak Ridge National Laboratory</a>.
                             My research develops TODO
-                            <p><strong>Bio:</strong> I received my Dr. rer. nat. from the <a href="https://www.kit.edu" target="_blank">Karlsruhe Institute of Technology</a> (KIT) in 2023, where I was advised by <a href="https://www.scc.kit.edu/personen/martin.frank.php" target="_blank">Prof. Dr. Martin Frank</a>. I received my M.Sc. and B.Sc. in Mathematics from <a href="https://rptu.de" target="_blank">TU Kaiserslautern</a>.</p>
+                            <p><strong>Bio:</strong> I received my Dr. rer. nat. from the <a href="https://www.kit.edu" target="_blank">Karlsruhe Institute of Technology</a> (KIT) in 2023, where I was advised by <a href="https://www.scc.kit.edu/en/staff/martin.frank.php" target="_blank">Prof. Dr. Martin Frank</a>. I received my M.Sc. and B.Sc. in Mathematics from <a href="https://rptu.de" target="_blank">TU Kaiserslautern</a>.</p>
                             <p style="text-align:left">
                                 <a href="https://github.com/ScSteffen" target="_blank">GitHub</a> &nbsp;|&nbsp;
                                 <a href="https://www.linkedin.com/in/steffen-schotthoefer" target="_blank">LinkedIn</a> &nbsp;|&nbsp;
