overhaul cv section

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <button class="nav-link" id="software-tab" data-bs-toggle="tab" data-bs-target="#software" type="button" role="tab" aria-controls="software" aria-selected="false">Software</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="cv-tab" data-bs-toggle="tab" data-bs-target="#cv" type="button" role="tab" aria-controls="cv" aria-selected="false">CV</button>
+                        <button class="nav-link" id="cv-tab" data-bs-toggle="tab" data-bs-target="#cv" type="button" role="tab" aria-controls="cv" aria-selected="false">Professional Record</button>
                     </li>
                 </ul>
 
@@ -517,15 +517,44 @@
 <div class="tab-pane fade" id="cv" role="tabpanel" aria-labelledby="cv-tab">
     <div style="padding:20px 0;">
 
+        <!-- Curriculum Vitae -->
+     <h4>Selected Appointments & Experience</h4>
+
+<p>
+<strong>Householder Fellow (Research Scientist)</strong> — 
+<a href="https://www.ornl.gov/content/alston-s-householder-fellowship-applied-mathematics-and-scientific-computing" target="_blank">
+Oak Ridge National Laboratory
+</a><br>
+Lead independent research on scalable low-rank methods for scientific simulation and efficient neural network training, with work spanning mathematical design, performance-critical HPC implementations, and integration into production scientific workflows.
+</p>
+
+<p>
+<strong>Research Software Engineer</strong> — <a href="https://www.math2market.com/index.html">Math2Market GmbH</a><br>
+Worked on performance-critical numerical software for industrial modeling applications, spanning algorithmic development, high-performance C++/GPU implementations, and integration of learning-based components into simulation pipelines.
+</p>
+
+
+<p>
+<strong>Bootstrapped Industry Platform (Technical Lead)</strong><br>
+Sole technical owner of a privately deployed B2B data analytics system, designed and implemented end-to-end and operated in production. The platform was engineered to handle noisy real-world inputs while meeting strict requirements on reliability, auditability, and deterministic behavior. These constraints strongly shaped my approach to building efficient, robust, and trustworthy computational systems.
+</p>
+
+<p style="margin-top:10px;">
+<!-- <a href="/Steffen_Schotthofer_CV.pdf" target="_blank">Full CV (PDF)</a>
+&nbsp;|&nbsp; -->
+<a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
+</p>
+        <hr style="margin:25px 0;">
+
         <!-- Awards & Fellowships -->
         <h4>Awards &amp; Fellowships</h4>
 
         <p><strong>Fellowships &amp; PI Awards</strong></p>
 
         <p>&bull; <strong><a href="https://www.ornl.gov/content/alston-s-householder-fellowship-applied-mathematics-and-scientific-computing" target="_blank">Alston S. Householder Fellowship</a></strong>, Oak Ridge National Laboratory, 2023
-        <br>Prestigious DOE-funded postdoctoral fellowship in applied mathematics and scientific computing.</p>
+        <br>Distinguished staff fellowship in applied mathematics and scientific computing at ORNL funded by the US DOE Advanced Scientific Computing Research (ASCR) program.</p>
 
-        <p>&bull; <strong><a href="https://www.ornl.gov/content/laboratory-directed-research-development" target="_blank">LDRD Early Career Award</a></strong>, Oak Ridge National Laboratory, 2024
+        <p>&bull; <strong><a href="https://www.ornl.gov/content/laboratory-directed-research-development" target="_blank">ORNL Early Career Award</a></strong>, Oak Ridge National Laboratory, 2024
         <br>Principal Investigator for two-year project on agentic AI for scientific simulation workflows.</p>
 
         <p>&bull; <strong><a href="https://www.foundationsofdl.de/" target="_blank">DFG Priority Programme Fellow</a></strong>, SPP 2298 &ldquo;Theoretical Foundations of Deep Learning&rdquo;, 2021&ndash;2024</p>
