--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <button class="nav-link" id="software-tab" data-bs-toggle="tab" data-bs-target="#software" type="button" role="tab" aria-controls="software" aria-selected="false">Software</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="cv-tab" data-bs-toggle="tab" data-bs-target="#cv" type="button" role="tab" aria-controls="cv" aria-selected="false">CV</button>
+                        <button class="nav-link" id="cv-tab" data-bs-toggle="tab" data-bs-target="#cv" type="button" role="tab" aria-controls="cv" aria-selected="false">Professional Record</button>
                     </li>
                 </ul>
 
@@ -176,7 +176,8 @@
                 <br>
                 Schotth&ouml;fer, Yang, Schnake
                 <br>
-                <em><a href="https://arxiv.org/abs/2505.08022" target="_blank">NeurIPS 2025 [oral]</a></em>
+                <em>NeurIPS 2025 [oral]</em>
+                <br>[<a href="https://neurips.cc/virtual/2025/oral/119732" target="_blank">proceedings</a>] [<a href="https://arxiv.org/abs/2505.08022" target="_blank">arXiv</a>]
             </p>
         </td>
     </tr>
@@ -187,7 +188,8 @@
                 <br>
                 Schotth&ouml;fer, Klein, Kusch
                 <br>
-                <em><a href="https://arxiv.org/abs/2506.17475" target="_blank">NeurIPS 2025</a></em>
+                <em>NeurIPS 2025</em>
+                <br>[<a href="https://neurips.cc/virtual/2025/poster/117118" target="_blank">proceedings</a>] [<a href="https://arxiv.org/abs/2506.17475" target="_blank">arXiv</a>]
             </p>
         </td>
     </tr>
@@ -198,7 +200,8 @@
                 <br>
                 Schotth&ouml;fer, Zangrando, Ceruti, Tudisco, Kusch
                 <br>
-                <em><a href="https://arxiv.org/abs/2410.18720" target="_blank">ICLR 2025</a></em>
+                <em>ICLR 2025</em>
+                <br>[<a href="https://openreview.net/forum?id=bsFWJ0Kget" target="_blank">proceedings</a>] [<a href="https://arxiv.org/abs/2410.18720" target="_blank">arXiv</a>]
             </p>
         </td>
     </tr>
@@ -210,6 +213,7 @@
                 Schotth&ouml;fer, Yang, Schnake
                 <br>
                 <em>ICML 2025 Workshop on Methods and Opportunities at Small Scale</em>
+                <br>[<a href="https://openreview.net/forum?id=yZY0w0Nr7E" target="_blank">proceedings</a>]
             </p>
         </td>
     </tr>
@@ -220,7 +224,8 @@
                 <br>
                 Schotth&ouml;fer, Laiu, Frank, Hauck
                 <br>
-                <em><a href="https://www.sciencedirect.com/science/article/abs/pii/S0021999125002505" target="_blank">Journal of Computational Physics</a></em>
+                <em>Journal of Computational Physics</em>
+                <br>[<a href="https://www.sciencedirect.com/science/article/abs/pii/S0021999125002505" target="_blank">journal</a>] [<a href="https://arxiv.org/abs/2404.14312" target="_blank">arXiv</a>]
             </p>
         </td>
     </tr>
@@ -231,7 +236,8 @@
                 <br>
                 Schotth&ouml;fer, Hauck
                 <br>
-                <em><a href="https://arxiv.org/abs/2505.17284" target="_blank">Journal of Computational and Theoretical Transport</a></em>
+                <em>Journal of Computational and Theoretical Transport</em>
+                <br>[<a href="https://www.tandfonline.com/doi/full/10.1080/23324309.2025.2573932" target="_blank">journal</a>] [<a href="https://arxiv.org/abs/2505.17284" target="_blank">arXiv</a>]
             </p>
         </td>
     </tr>
@@ -242,7 +248,8 @@
                 <br>
                 Kusch, Schotth&ouml;fer, Walter
                 <br>
-                <em><a href="https://arxiv.org/abs/2502.03006" target="_blank">Arxiv Preprint</a></em>
+                <em>Preprint</em>
+                <br>[<a href="https://arxiv.org/abs/2502.03006" target="_blank">arXiv</a>]
             </p>
         </td>
     </tr>
@@ -253,7 +260,8 @@
                 <br>
                 Snyder, Yang, Schnake, Schotth&ouml;fer
                 <br>
-                <em><a href="https://arxiv.org/abs/2601.08882" target="_blank">NeurIPS 2025 Workshop on Constrained Optimization for Machine Learning</a></em>
+                <em>NeurIPS 2025 Workshop on Constrained Optimization for Machine Learning</em>
+                <br>[<a href="https://arxiv.org/abs/2601.08882" target="_blank">arXiv</a>]
             </p>
         </td>
     </tr>
@@ -273,7 +281,8 @@
                 <br>
                 Schotth&ouml;fer, Zhou, Albring, Gauger
                 <br>
-                <em><a href="https://proceedings.neurips.cc/paper_files/paper/2024/file/ea48cb23a02ec3b895b0b0124307b0ec-Paper-Conference.pdf" target="_blank">NeurIPS 2024</a></em>
+                <em>NeurIPS 2024</em>
+                <br>[<a href="https://proceedings.neurips.cc/paper_files/paper/2024/hash/ea48cb23a02ec3b895b0b0124307b0ec-Abstract-Conference.html" target="_blank">proceedings</a>] [<a href="https://arxiv.org/abs/2305.19059" target="_blank">arXiv</a>]
             </p>
         </td>
     </tr>
@@ -284,7 +293,8 @@
                 <br>
                 Schotth&ouml;fer, Laiu
                 <br>
-                <em><a href="https://arxiv.org/abs/2406.17887" target="_blank">Arxiv Preprint</a></em>
+                <em>Preprint</em>
+                <br>[<a href="https://arxiv.org/abs/2406.17887" target="_blank">arXiv</a>]
             </p>
         </td>
     </tr>
@@ -295,7 +305,8 @@
                 <br>
                 Lee, Schotth&ouml;fer, Xiao, Krumscheid, Frank
                 <br>
-                <em><a href="https://arxiv.org/abs/2402.16613" target="_blank">Arxiv Preprint</a></em>
+                <em>Preprint</em>
+                <br>[<a href="https://arxiv.org/abs/2402.16613" target="_blank">arXiv</a>]
             </p>
         </td>
     </tr>
@@ -315,7 +326,8 @@
                 <br>
                 Einkemmer, Kusch, Schotth&ouml;fer
                 <br>
-                <em><a href="https://arxiv.org/abs/2311.06399" target="_blank">Arxiv Preprint</a></em>
+                <em>Preprint</em>
+                <br>[<a href="https://arxiv.org/abs/2311.06399" target="_blank">arXiv</a>]
             </p>
         </td>
     </tr>
@@ -337,7 +349,8 @@
                 <br>
                 Xiao, Schotth&ouml;fer, Frank
                 <br>
-                <em><a href="https://www.sciencedirect.com/science/article/abs/pii/S002199912300373X" target="_blank">Journal of Computational Physics</a></em>
+                <em>Journal of Computational Physics</em>
+                <br>[<a href="https://www.sciencedirect.com/science/article/abs/pii/S002199912300373X" target="_blank">journal</a>] [<a href="https://arxiv.org/abs/2203.02933" target="_blank">arXiv</a>]
             </p>
         </td>
     </tr>
@@ -348,7 +361,8 @@
                 <br>
                 Kusch, Schotth&ouml;fer, Stammer, Wolters, Xiao
                 <br>
-                <em><a href="https://doi.org/10.1145/3630001" target="_blank">ACM Transactions on Mathematical Software</a></em>
+                <em>ACM Transactions on Mathematical Software</em>
+                <br>[<a href="https://doi.org/10.1145/3630001" target="_blank">journal</a>] [<a href="https://arxiv.org/abs/2205.08417" target="_blank">arXiv</a>]
             </p>
         </td>
     </tr>
@@ -368,7 +382,8 @@
                 <br>
                 Schotth&ouml;fer, Zangrando, Kusch, Ceruti, Tudisco
                 <br>
-                <em><a href="https://arxiv.org/abs/2205.13571" target="_blank">NeurIPS 2022</a></em>
+                <em>NeurIPS 2022</em>
+                <br>[<a href="https://proceedings.neurips.cc/paper_files/paper/2022/hash/7e98b00eeafcdaeb0c5661fb9355be3a-Abstract-Conference.html" target="_blank">proceedings</a>] [<a href="https://arxiv.org/abs/2205.13571" target="_blank">arXiv</a>]
             </p>
         </td>
     </tr>
@@ -379,7 +394,8 @@
                 <br>
                 Schotth&ouml;fer, Xiao, Frank, Hauck
                 <br>
-                <em><a href="https://proceedings.mlr.press/v162/schotthofer22a.html" target="_blank">ICML 2022 [Spotlight]</a></em>
+                <em>ICML 2022 [Spotlight]</em>
+                <br>[<a href="https://proceedings.mlr.press/v162/schotthofer22a.html" target="_blank">proceedings</a>] [<a href="https://arxiv.org/abs/2201.10364" target="_blank">arXiv</a>]
             </p>
         </td>
     </tr>
@@ -399,7 +415,8 @@
                 <br>
                 Schotth&ouml;fer, Xiao, Frank, Hauck
                 <br>
-                <em><a href="https://arc.aiaa.org/doi/10.2514/6.2021-2895" target="_blank">AIAA Aviation 2021</a></em>
+                <em>AIAA Aviation 2021</em>
+                <br>[<a href="https://arc.aiaa.org/doi/10.2514/6.2021-2895" target="_blank">proceedings</a>] [<a href="https://arxiv.org/abs/2106.09445" target="_blank">arXiv</a>]
             </p>
         </td>
     </tr>
@@ -419,7 +436,8 @@
                 <br>
                 Schotth&ouml;fer, Zhou, Albring, Gauger
                 <br>
-                <em><a href="https://arc.aiaa.org/doi/10.2514/1.J059983" target="_blank">AIAA Journal [AIAA AVIATION 2020 Best Student Paper Award]</a></em>
+                <em>AIAA Journal [AIAA AVIATION 2020 Best Student Paper Award]</em>
+                <br>[<a href="https://arc.aiaa.org/doi/10.2514/1.J059983" target="_blank">journal</a>] [<a href="https://arxiv.org/abs/2412.00604" target="_blank">arXiv</a>]
             </p>
         </td>
     </tr>
@@ -439,7 +457,8 @@
                 <br>
                 Totzeck, Pinnau, Blauth, Schotth&ouml;fer
                 <br>
-                <em><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/pamm.201800291" target="_blank">PAMM</a></em>
+                <em>PAMM</em>
+                <br>[<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/pamm.201800291" target="_blank">journal</a>]
             </p>
         </td>
     </tr>
@@ -517,15 +536,44 @@
 <div class="tab-pane fade" id="cv" role="tabpanel" aria-labelledby="cv-tab">
     <div style="padding:20px 0;">
 
+        <!-- Curriculum Vitae -->
+     <h4>Selected Appointments & Experience</h4>
+
+<p>
+<strong>Householder Fellow (Research Scientist)</strong> — 
+<a href="https://www.ornl.gov/content/alston-s-householder-fellowship-applied-mathematics-and-scientific-computing" target="_blank">
+Oak Ridge National Laboratory
+</a><br>
+Lead independent research on scalable low-rank methods for scientific simulation and efficient neural network training, with work spanning mathematical design, performance-critical HPC implementations, and integration into production scientific workflows.
+</p>
+
+<p>
+<strong>Research Software Engineer</strong> — <a href="https://www.math2market.com/index.html">Math2Market GmbH</a><br>
+Worked on performance-critical numerical software for industrial modeling applications, spanning algorithmic development, high-performance C++/GPU implementations, and integration of learning-based components into simulation pipelines.
+</p>
+
+
+<p>
+<strong>Bootstrapped Industry Platform (Technical Lead)</strong><br>
+Sole technical owner of a privately deployed B2B data analytics system, designed and implemented end-to-end and operated in production. The platform was engineered to handle noisy real-world inputs while meeting strict requirements on reliability, auditability, and deterministic behavior. These constraints strongly shaped my approach to building efficient, robust, and trustworthy computational systems.
+</p>
+
+<p style="margin-top:10px;">
+<!-- <a href="/Steffen_Schotthofer_CV.pdf" target="_blank">Full CV (PDF)</a>
+&nbsp;|&nbsp; -->
+<a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
+</p>
+        <hr style="margin:25px 0;">
+
         <!-- Awards & Fellowships -->
         <h4>Awards &amp; Fellowships</h4>
 
         <p><strong>Fellowships &amp; PI Awards</strong></p>
 
         <p>&bull; <strong><a href="https://www.ornl.gov/content/alston-s-householder-fellowship-applied-mathematics-and-scientific-computing" target="_blank">Alston S. Householder Fellowship</a></strong>, Oak Ridge National Laboratory, 2023
-        <br>Prestigious DOE-funded postdoctoral fellowship in applied mathematics and scientific computing.</p>
+        <br>Distinguished staff fellowship in applied mathematics and scientific computing at ORNL funded by the US DOE Advanced Scientific Computing Research (ASCR) program.</p>
 
-        <p>&bull; <strong><a href="https://www.ornl.gov/content/laboratory-directed-research-development" target="_blank">LDRD Early Career Award</a></strong>, Oak Ridge National Laboratory, 2024
+        <p>&bull; <strong><a href="https://www.ornl.gov/content/laboratory-directed-research-development" target="_blank">ORNL Early Career Award</a></strong>, Oak Ridge National Laboratory, 2024
         <br>Principal Investigator for two-year project on agentic AI for scientific simulation workflows.</p>
 
         <p>&bull; <strong><a href="https://www.foundationsofdl.de/" target="_blank">DFG Priority Programme Fellow</a></strong>, SPP 2298 &ldquo;Theoretical Foundations of Deep Learning&rdquo;, 2021&ndash;2024</p>
